--- a/members/templates/basy.html
+++ b/members/templates/basy.html
@@ -3,7 +3,7 @@
 <body>
 
 <h1>Hello World!</h1>
-<p>Welcome to my first Django Git project!</p>
+<p>Welcome to my first Django Gitty project!</p>
 
 </body>
 </html>
